# nba_extractor

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  nba_extractor.py  pyproject.toml
dags/: daily_dag.py
extractors/: config.py  nba_extractor.py
raw/: dataform_nba_stats.py  players.py  raw_players.py  stats.py  teams.py
raw/settings/: config.py
raw/utils/: transform.py
utils/: load.py
