[project]
name = "nba-extractor"
version = "0.1.0"
description = ""
authors = [
    {name = "Davi Vinicius Bogo"}
]
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "nba-api (==1.7)",
    "pandas (>=2.2.3,<3.0.0)",
    "apache-airflow (>=2.10.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
