[tool.poetry]
name = "nba-extractor"
version = "0.1.0"
description = ""
authors = ["Davi Vinicius Bogo <bogodavi10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
nba-api = "^1.7"
pandas = "^2.0.0"
apache-airflow = "^2.10.1"
google-cloud-dataform = "^0.5.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
